--- a/layouts/objects/section.html
+++ b/layouts/objects/section.html
@@ -12,7 +12,7 @@
   <div id="components">
     <div class="row gutters">
       {{ range $cat := .Page.Params.pdcategories}}
-      <h3>{{$cat}}</h3>
+      <h3 id="{{$cat | anchorize}}">{{$cat}}</h3>
       {{ range where $pages "Params.pdcategory" $cat }}
       <div class="col col-4 item">
         <p style="margin: 1px"><a href="{{ .Permalink }}">[{{ .Title }}]</a>
