mdlink: trim whitespace from HTML output
https://gohugo.io/templates/introduction/#whitespace

--- a/layouts/shortcodes/mdlink.html
+++ b/layouts/shortcodes/mdlink.html
@@ -1,7 +1,7 @@
-{{ $link := .Get 0}}
-{{ $anchor := .Get 1}}
-{{ if $anchor }}
-{{ printf "%s#%s" $link ($anchor | anchorize) }}
-{{ else }}
-{{ $link }}
-{{ end }}
+{{- $link := .Get 0 -}}
+{{- $anchor := .Get 1 -}}
+{{- if $anchor -}}
+{{- printf "%s#%s" $link ($anchor | anchorize) -}}
+{{- else -}}
+{{- $link -}}
+{{- end -}}
