--- a/static/css/pd-v0.1.css
+++ b/static/css/pd-v0.1.css
@@ -461,19 +461,17 @@ h1:hover a, h2:hover a, h3:hover a, h4:hover a { visibility: visible}
 
 /* Pd specific styles */
 
-/* urgh: umlaeute doesn't know any CSS */
-h3.pdobj {
-    font-size: 14.7pt;
-}
-
 .pdobj {
-    margin: 1px;
     font-family: 'Consolas', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
-    font-size: 90%;
     text-align: left;
     border-radius: 8px;
     padding: 4px 8px;
 }
+.pdobj:not(h*) {
+    margin: 1px;
+    font-size: 90%;
+}
+
 .pdobj:before {
   content: "[";
 }
